@@ -265,6 +265,9 @@ Tools/Demos
 Tests
 -----
 
+- Issue #3699: Fix test_bigaddrspace and extend it to test bytestrings
+  as well as unicode strings.  Initial patch by Sandro Tosi.
+
 - Issue #10294: Remove dead code form test_unicode_file.
 
 - Issue #10123: Don't use non-ascii filenames in test_doctest tests. Add a
